# wem2ogg

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  build_wwise_audio_tools.py  formate.toml  justfile  meson.build  pyproject.toml  repo_helper.yml  run_auditwheel.py  tox.ini  wem2ogg.cpp  wem2ogg.pyi
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cibuildwheel.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_linux_sys_libs.yml
libvorbis/: README.md  os.h
misc/: __init__.py
misc/ogg/: config_types.h
tests/: test_wem2ogg.py
