[build-system]
requires = [ "cmake", "meson@ git+https://github.com/mesonbuild/meson", "meson-python",]
build-backend = "mesonpy"

[project]
name = "wem2ogg"
version = "0.1.1"
description = "Convert Wwise WEM files to OGG."
readme = "README.rst"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = []

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[[project.authors]]
name = "Powzix"

[project.urls]
Homepage = "https://github.com/domdfcoding/wem2ogg"
"Issue Tracker" = "https://github.com/domdfcoding/wem2ogg/issues"
"Source Code" = "https://github.com/domdfcoding/wem2ogg"

[tool.whey]
base-classifiers = []
python-versions = [ "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Linux", "Windows",]
license-key = "MIT"

[tool.importcheck]
always = [ "wem2ogg",]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.cibuildwheel.linux]
before-all = [ "yum install cmake -y", "python3 build_wwise_audio_tools.py",]
repair-wheel-command = 'LD_LIBRARY_PATH="{project}/wwise-audio-tools/build/lib:$LD_LIBRARY_PATH" auditwheel repair -w {dest_dir} {wheel}'
skip = [ "*-musllinux*",]

[tool.cibuildwheel.windows.config-settings]
setup-args = [ "--vsenv",]

[tool.meson-python.args]
setup = [ "--vsenv",]
